manifests/mssql-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
    name: employee
    labels:
      name: employee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
  namespace: employee
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql
        image: 'mcr.microsoft.com/mssql/server:2017-CU8-ubuntu'
        resources:
          limits:
            memory: 3Gi
            cpu: 1
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: employee
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
