manifests/netcore-deploy-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment-green
  namespace: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-green
  template:
    metadata:
      labels:
        app: employee-green
    spec:
      containers:
      - name: employee-green
        image: yaronzlotolov/employees:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service-green
  namespace: employee
spec:
  selector:
    app: employee-green
  ports:
  - port: 8080
    targetPort: 80
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
  name: employee-ingress-nginx
  namespace: employee
spec:
  tls:
  - hosts:
    - employee.green.com
    secretName: employee-secret
  rules:
  - host: employee.green.com
    http:
     paths:
      - path: /
        backend:
          serviceName: employee-service-green
          servicePort: 80
