manifests/netcore-deploy-with-ingress-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment
  namespace: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-pod
  template:
    metadata:
      labels:
        app: employee-pod
    spec:
      containers:
      - name: employee-pod
        image: yaronzlotolov/employees:v4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: employee
spec:
  selector:
    app: employee-pod
  ports:
  - port: 8080
    targetPort: 80
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
  name: employee-ingress-nginx
  namespace: employee
spec:
  tls:
  - hosts:
    - employee.management.com
    secretName: employee-secret
  rules:
  - host: employee.management.com
    http:
     paths:
      - path: /
        backend:
          serviceName: employee-service
          servicePort: 80
